--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
